documentando criação dos users
